--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   test:
     name: Format, Build & Test
-    runs-on: jimdex-default-runners
+    runs-on: ubuntu-latest
     steps:
       - name: Set up Go 1.13
         uses: actions/setup-go@v2
