--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,31 +1,33 @@
 name: ci
-
 on:
   push:
-    branches:
-      - "DIA-2900-Update-Dependencies"
-
+    branches: ["**"]
 jobs:
-  build:
+  test:
+    name: Format, Build & Test
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Set up Go 1.19
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.19
+      - name: Checkout code
         uses: actions/checkout@v3
-      -
-        name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      -
-        name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/clockbox:latest
+      - name: Format
+        run: make format
+      - name: Build
+        run: make build
+      - name: Test
+        run: make test
+  continuous-delivery:
+    needs:
+      - test
+    uses: Staffbase/gha-workflows/.github/workflows/template_gitops.yml@v1.8.0
+    with:
+      gitops-stage: |-
+        kubernetes/namespaces/observatory-exporter/base/observatory-exporter-deploy.yaml spec.template.spec.containers[0].image  
+    secrets:
+      gitops-token: ${{ secrets.GITOPS_TOKEN }}
+      docker-username: ${{ secrets.DOCKER_USERNAME }}
+      docker-password: ${{ secrets.DOCKER_PASSWORD }}
+ 
